Added coverage / build status and added a test.

--- a/example/index.html
+++ b/example/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="../src/angular-ui-view-spinner.css" />
 </head>
 
-<body ng-app="example">
+<body ng-app="example" ng-strict-di>
 
 <div ui-view></div>
 
