--- a/example/index.html
+++ b/example/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Angular Timeline Example</title>
+  <title>Angular UI View Spinner Example</title>
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="../src/angular-ui-view-spinner.css" />
 </head>
